# moderncpp-project-template

cmake/: compiler_options.cmake
project/: CMakeLists.txt
project/grasp3d/: CMakeLists.txt
project/grasp3d/include/: grasplib.h
project/grasp3d/src/: grasplib.cpp
project/grasp3d/test/: grasplib_test.cpp
project/test/: CMakeLists.txt
project/test/src/: test_grasp.cpp
